fix: feed was broken on mobile

--- a/src/pages/Feed/FeedPhotosItem.module.css
+++ b/src/pages/Feed/FeedPhotosItem.module.css
@@ -4,7 +4,7 @@
 }
 
 @media (max-width: 40rem) {
-  .photo {
+  .photo:nth-child(2) {
     grid-column: initial;
     grid-row: initial;
   }
